# deduper

./: .gitignore  MANIFEST.in  README.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
deduper/: __main__.py  app.py  config.py
deduper/routes/: views.py
deduper/services/: background_scanner.py  duplicate_finder.py
deduper/utils/: __init__.py  bktree.py  hash_cache.py  helpers.py  logging_config.py  media.py  metrics.py  setup.py
templates/: index.html
